--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.4.0",
     "jquery": "^3.7.1",
+    "ng2-charts": "^5.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
