Upgrade project to Angular 20 and update dependencies
Updated Angular framework and related dependencies from v16 to v20, including TypeScript and zone.js. Refactored angular.json to use new Angular 20 build and serve targets. Updated documentation in README.md to reflect new versions and requirements. Added new utility file ki-parser.util.ts. Adjusted schematics and configuration for compatibility with Angular 20.

--- a/angular.json
+++ b/angular.json
@@ -15,11 +15,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular/build:application",
           "options": {
             "outputPath": "dist/dbz-encyclopedia-webapp",
             "index": "src/index.html",
-            "main": "src/main.ts",
+            "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -59,36 +59,33 @@
               "outputHashing": "all"
             },
             "development": {
-              "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": true,
               "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
+              "sourceMap": true
             }
           },
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "dbz-encyclopedia-webapp:build:production"
+              "buildTarget": "dbz-encyclopedia-webapp:build:production"
             },
             "development": {
-              "browserTarget": "dbz-encyclopedia-webapp:build:development"
+              "buildTarget": "dbz-encyclopedia-webapp:build:development"
             }
           },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "builder": "@angular/build:extract-i18n",
           "options": {
-            "browserTarget": "dbz-encyclopedia-webapp:build"
+            "buildTarget": "dbz-encyclopedia-webapp:build"
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular/build:karma",
           "options": {
             "polyfills": [
               "zone.js",
@@ -119,5 +116,31 @@
   },
   "cli": {
     "analytics": "ecca5081-0cff-4a6c-b703-a627fd0a5e6f"
+  },
+  "schematics": {
+    "@schematics/angular:component": {
+      "type": "component"
+    },
+    "@schematics/angular:directive": {
+      "type": "directive"
+    },
+    "@schematics/angular:service": {
+      "type": "service"
+    },
+    "@schematics/angular:guard": {
+      "typeSeparator": "."
+    },
+    "@schematics/angular:interceptor": {
+      "typeSeparator": "."
+    },
+    "@schematics/angular:module": {
+      "typeSeparator": "."
+    },
+    "@schematics/angular:pipe": {
+      "typeSeparator": "."
+    },
+    "@schematics/angular:resolver": {
+      "typeSeparator": "."
+    }
   }
 }
